# nidamllm

./: CITATION.cff  DEVELOPMENT.md  README.md  pyproject.toml  release.sh
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/workflows/: create-releases.yml  dependabot-auto-merge.yml  upworks.yml
github/ISSUE_TEMPLATE/: bug_report.yml
github/workflows/: create-releases.yml
src/nidam/: __main__.py  accelerator_spec.py  analytic.py  clean.py  cloud.py  common.py  local.py  model.py  repo.py  venv.py
